# RK

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  setup_hid_gadget.sh
docs/: Pose_line_by_line.md  RK3588_Game_Mode_Complete_Guide.md  USB-HID_line_by_line.md  hdmi_capture_line_by_line.md
scripts/: clean-build.sh  clean-gadget.sh  cleanup-gadget.sh  cleanup-hid-gadget.sh  cleanup.sh  configure-hid-gadget.sh  read-real-device-info.sh  reconnect-gadget.sh  reset-gadget.sh  run.sh  setup_combined_hid.sh  startup-check.sh  test-mouse-only.sh  test.sh
src/: CMakeLists.txt  aim_engine.cpp  aim_engine.h  hdmi_capture.c  hdmi_capture.h  hdmi_preview.cpp  hid_controller.cpp  hid_controller.h  hid_keycode_map.c  hid_keycode_map.h  hid_mouse_test.c  hid_relay.cpp  hid_relay.h  pose_demo.cpp  rga_preprocess.c  rga_preprocess.h  usb_hid.c  usb_hid.h  yolo_inference.cpp  yolo_inference.h
